# Serial_Communications

./: CMakeLists.txt  README.md  serial_com.cpp  virtual_comPort.py  端口说明.txt
非采用boost串口通讯（吕朝顺）/: CMakeLists.txt  main.cpp  main.cpp~  testSerial.kdev4
非采用boost串口通讯（吕朝顺）/.kdev4/: testSerial.kdev4
